# NativeWindowsLauncher

./: LICENSE.txt  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/de/wulkanat/www/nativewindowslauncher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AccExpInterpolator.cpp  AccExpInterpolator.h  GLRender.cpp  GLRender.h  Matrix.cpp  Matrix.h  WindowsLauncher.cpp  WindowsLauncher.h  native-lib.cpp
app/src/main/java/de/wulkanat/www/nativewindowslauncher/: AccExpInterpolator.kt  GLRenderNative.kt  GLRenderer.kt  GLSurf.kt  MainActivity.kt  RiGraphicTools.kt  Tile.kt  WindowsLauncher.kt
app/src/main/res/anim/: windows_mobile_animation_enter.xml  windows_mobile_animation_exit.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: anim_conf.xml  strings.xml  styles.xml
app/src/test/java/de/wulkanat/www/nativewindowslauncher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
